added html & css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     If he still should prove refractory, add a picture of his factory.
     </P>
     <hr>
-    <P>When your client's hooping mad,<br>
+    <P>When your client's hopping mad,<br>
     put his picture in the ad.</P>
     <P>If he still should prove refractory,<br> add a picture of his factory</P>
     
