--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>The Advertising Agency Song</title>
 </head>
 <body>
-    <P>When your client's mad, put his picture in the ad.
+    <P>When your client's hopping mad, put his picture in the ad.
     If he still should prove refractory, add a picture of his factory.
     </P>
     <hr>
